force-app/main/default/objects/Lead/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <inlineHelpText>Puede seleccionar para Personas: Cedula de Identidad, Cedula de Residente, DUI, Pasaporte y Otros
Para cuentas Empresas: RUC, RUC Extranjero y Otros</inlineHelpText>
    <label>Tipo de identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de Identidad</fullName>
            </value>
            <value>
                <fullName>Cedula de Residente</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>DUI</fullName>
            </value>
            <value>
                <fullName>RUC</fullName>
            </value>
            <value>
                <fullName>RUC Extranjero</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>