force-app/main/default/objects/Lead/fields/Tipo_de_email_UDC__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_email_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencias: Email address, Internal address, Internet address</inlineHelpText>
    <label>Tipo de email</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipos de eMail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Tipo de email)</relationshipLabel>
    <relationshipName>Leads9</relationshipName>
    <type>Lookup</type>
</CustomField>