force-app/main/default/objects/Lead/fields/Tipo_de_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Formulario__c</fullName>
    <label>Tipo de Formulario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Prueba de Manejo</fullName>
            </value>
            <value>
                <fullName>Cotizador Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>