force-app/main/default/objects/Lead/fields/Tipo_de_telefono_UDC__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_telefono_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencia de opciones, Home, Work, Car o Mobile, FAX, Home - Emergency Contact, Other, Work - Emergency Contact</inlineHelpText>
    <label>Tipo de teléfono</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipo de Telefono</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Tipo de teléfono)</relationshipLabel>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>