force-app/main/default/objects/Lead/fields/URL_origen_formulario__c.field-meta.xml
<CustomField>
    <fullName>URL_origen_formulario__c</fullName>
    <description>Captura URL de Submissions de formulario web, uso especial para leer origen del Lead</description>
    <label>URL origen formulario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>