force-app/main/default/objects/Lead/fields/URL_PDF_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>URL_PDF_Cotizacion__c</fullName>
    <description>URL del PDF Generado desde el configurador de Marca</description>
    <label>URL PDF Cotizacion</label>
    <type>Url</type>
</CustomField>