force-app/main/default/objects/Lead/recordTypes/Anfitrion.recordType-meta.xml
<RecordType>
    <fullName>Anfitrion</fullName>
    <active>true</active>
    <businessProcess>Proceso de leads para Anfitrión</businessProcess>
    <label>Anfitrión</label>
</RecordType>