force-app/main/default/objects/Lead/recordTypes/Autolote.recordType-meta.xml
<RecordType>
    <fullName>Autolote</fullName>
    <active>true</active>
    <businessProcess>Toyota</businessProcess>
    <label>Autolote</label>
</RecordType>