force-app/main/default/objects/Lead/recordTypes/Venta_motos.recordType-meta.xml
<RecordType>
    <fullName>Venta_motos</fullName>
    <active>true</active>
    <businessProcess>Toyota</businessProcess>
    <description>Tipo de registro para la venta de motos Genesis, Yamaha y Hero</description>
    <label>Venta motos</label>
</RecordType>