force-app/main/default/objects/Lead/recordTypes/Ventas.recordType-meta.xml
<RecordType>
    <fullName>Ventas</fullName>
    <active>true</active>
    <businessProcess>Toyota</businessProcess>
    <label>Ventas</label>
</RecordType>