force-app/main/default/objects/Lead/validationRules/Completar_motivo_de_lead_perdio.validationRule-meta.xml
<ValidationRule>
    <fullName>Completar_motivo_de_lead_perdio</fullName>
    <active>true</active>
    <description>Esta regla de validacion sirve para que sea obligatorio completar el motivo de lead perdido para poder pasarlo a dicho estado</description>
    <errorConditionFormula>AND(
				OR( 
			   	RecordType.DeveloperName =&quot;Ventas&quot;,
				   RecordType.DeveloperName =&quot;Autolote&quot;,
				   RecordType.DeveloperName =&quot;Venta_motos&quot;),
				 ISPICKVAL(Status,&quot;Lead perdido&quot;), 
			 	ISBLANK(TEXT(Motivo_de_lead_perdido__c))
				)</errorConditionFormula>
    <errorMessage>Debe completar &quot;Motivo de lead perdido&quot; para cambiar el estado a Lead perdido</errorMessage>
</ValidationRule>