force-app/main/default/objects/Lead/listViews/Equipo_Autolote_Lead.listView-meta.xml
<ListView>
    <fullName>Equipo_Autolote_Lead</fullName>
    <columns>Color_de_tiempo__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Modelo_a_cotizar_autolote__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Estoy_interasado_en__c</columns>
    <columns>Cuando_desea_realizar_su_compra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Autolote</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Esperando contacto,Contacto intentado,Contacto exitoso,Lead a futuro</value>
    </filters>
    <label>Equipo Autolote</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>