force-app/main/default/objects/Lead/listViews/Equipo_Autos_Kia_Lead.listView-meta.xml
<ListView>
    <fullName>Equipo_Autos_Kia_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Modelo_a_cotizar__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Color_de_tiempo__c</columns>
    <columns>Cedula_Nro__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Ventas</value>
    </filters>
    <filters>
        <field>Marca_a_cotizar__c</field>
        <operation>equals</operation>
        <value>Kia</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Esperando contacto,Contacto intentado</value>
    </filters>
    <label>Equipo Autos Kia</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>