force-app/main/default/objects/Lead/listViews/Equipo_Camiones_Lead.listView-meta.xml
<ListView>
    <fullName>Equipo_Camiones_Lead</fullName>
    <columns>Color_de_tiempo__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Marca_a_cotizar__c</columns>
    <columns>Modelo_a_cotizar__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Cuando_desea_realizar_su_compra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marca_a_cotizar__c</field>
        <operation>equals</operation>
        <value>Hino,JMC</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Ventas</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Esperando contacto,Contacto intentado,Contacto exitoso,Lead a futuro,Convertido</value>
    </filters>
    <label>Equipo Camiones</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>