force-app/main/default/objects/Lead/listViews/Equipo_de_Motos_G_nesis_Vista_Janelly_G.listView-meta.xml
<ListView>
    <fullName>Equipo_de_Motos_G_nesis_Vista_Janelly_G</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Esperando contacto,Contacto intentado,Contacto exitoso,Lead a futuro,Convertido</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Equipo Motos Genesis,jjguti,fdelg,lseq</value>
    </filters>
    <label>Equipo de Motos Génesis Vista Janelly G.</label>
    <sharedTo>
        <group>Equipo_Motos_G_nesis</group>
    </sharedTo>
</ListView>