force-app/main/default/objects/Lead/listViews/Equipo_Suzuki_Lead.listView-meta.xml
<ListView>
    <fullName>Equipo_Suzuki_Lead</fullName>
    <columns>Color_de_tiempo__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Modelo_a_cotizar__c</columns>
    <columns>Tiempo_transcurrido__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marca_a_cotizar__c</field>
        <operation>equals</operation>
        <value>Suzuki</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Ventas</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacto intentado</value>
    </filters>
    <label>Equipo Suzuki</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>