force-app/main/default/objects/Lead/listViews/Leads_asignados_a_SF_Admin.listView-meta.xml
<ListView>
    <fullName>Leads_asignados_a_SF_Admin</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Marca_a_cotizar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>SFAdmin</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>SFAdmin</value>
    </filters>
    <label>Leads asignados a SF Admin</label>
</ListView>