force-app/main/default/objects/Lead/listViews/Prospectos_Abiertos_Toyota.listView-meta.xml
<ListView>
    <fullName>Prospectos_Abiertos_Toyota</fullName>
    <columns>Color_de_tiempo__c</columns>
    <columns>Marca_a_cotizar__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Modelo_a_cotizar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Anfitrion</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Esperando contacto,Contacto intentado,Contacto exitoso</value>
    </filters>
    <filters>
        <field>Marca_a_cotizar__c</field>
        <operation>equals</operation>
        <value>Toyota</value>
    </filters>
    <label>Prospectos Abiertos Toyota</label>
</ListView>